--- a/web/index.html
+++ b/web/index.html
@@ -31,8 +31,10 @@
 
   <title>flutter_application_2</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfuOYUKn-0HhYwhtKR_4tfd8CPLJwffKE"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
