--- a/web/index.html
+++ b/web/index.html
@@ -27,9 +27,9 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="/web/icons/bairesicon.png"/>
 
-  <title>flutter_application_2</title>
+  <title>BairesCompare</title>
   <link rel="manifest" href="manifest.json">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfuOYUKn-0HhYwhtKR_4tfd8CPLJwffKE"></script>
 </head>
